[package]
name = "async-fn"
version = "0.1.0"
authors = ["jonasrichard <richard.jonas.76@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
# tokio = { version = "0.3", features = ["rt", "rt-multi-thread", "sync", "time"] }
tokio = { version = "0.3", features = ["full"] }
