[package]
name = "chat"
version = "0.1.0"
authors = ["jonasrichard <richard.jonas.76@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hyper = "0.13"
json = "*"
tokio = { version = "0.2", features = ["full"] }
