[package]
name = "endpoint"
version = "0.1.0"
authors = ["jonasrichard <richard.jonas.76@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync"] }
